[metadata]
license_file = LICENSE
description-file = README.md

[flake8]
include = dante
exclude =
    dante/__init__.py
    dante/vendor

[run]
omit =
    dante/api.py
    dante/cli.py
    dante/__main__.py
    dante/vendor/*

[tool:pytest]
addopts =
    --cov=dante
    --cov-report=xml:coverage_report/coverage.xml
    --cov-report=term
    --numprocesses auto
markers =
    utils
    validate
    color
    models
    operations
    printer
    pip_parser

[dante]
allow_named_versions = true
named_version_patterns =
    0.*version

lock_file_path = requirements-dev.lock
requirements_files =
    requirements-dev.txt
lock_files =
    requirements-dev.lock
